Refactoring: - Refactor to JAVA 8 - Diapresentation used ViewPanel - Diashow preview now uses ViewPanel - removed some unnecessary TODOs